License fix in package.json

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "polyfill"
   ],
   "author": "Vitaly Gordon <rocket.mind@gmail.com>",
-  "license": "MIT",
+  "license": "Unlicense",
   "bugs": {
     "url": "https://github.com/xpl/es7-object-polyfill/issues"
   },
