--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.5",
   "description": "A polyfill for missing Object.values / Object.entries",
   "main": "es7-object-polyfill.js",
+  "unpkg": "build/es7-object-polyfill.browser.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha --reporter spec"
   },
